--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 		<main>
 			<section>
 				<h1>Программа для проверки соответствия статей</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>Чтобы узнать, на сколько процентов введенный текст совпадает с одной из категорий новостного сайта Newslab.ru, введите текст в поле для вставки и нажмите "сравнить и найти"</p>
 			</section>
 			<section>
 				<h3>Вставьте текст для проверки соответствия</h3>
