--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
 				<form class="accordance_form" action="{% url 'predict' %}" method="POST">
 					{% csrf_token %}
 					<textarea name="accordance_textarea" class="accordance" placeholder="Поле для вставки текста"></textarea><br>
-					<button type="submit">Сравнить и найти</button>
+					<button type="submit">Сравнить</button>
 				</form>
 			</section>
 		</main>
